--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ function calculate() {
 document.forms["myform"]["total"].value = ans; 
 document.forms["myform"]["cgst"].value = gst;
 document.forms["myform"]["sgst"].value = gst;
-document.forms["myform"]["grandtotalworo"].value = ans+2*gst;
+document.forms["myform"]["grandtotalworo"].value = gtotalworo;
 document.forms["myform"]["grandtotalwro"].value = gtotal;
 document.forms["myform"]["roundoff"].value = roundoffvalue.toFixed(2);
  }  
