--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </style>  
 <body>  
 <div class="container">
-<h1 class="text-center"> GANPATI BASTRAM Bill Calculator </h1> <br>
+<h1 class="text-center"> GANPATI BASTRAM Bill Calculator </h1> 
 <h5 class="text-center">Maniyaripur, Sattanpur, Varanasi - 221405</h5> <br> 
 <form  action = "#" method = "post" name = "myform">
   <h2 class="text-center"> INPUT </h2> <br> 
