--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>   
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 <title>GANPATI BASTRAM Bill Calculator</title>     
  </head>  
 <style>  
 
-  body{background-color:#FEB86B;font-family: 'EB Garamond', serif;}
+  body{background-color:#FEB86B;font-family: 'Josefin Sans', sans-serif;}
   label{font-size:20px;}
   hr{border: 3px solid black;}
   form{border: 2px solid black;
