changed id to amount

--- a/invoicepdf.html
+++ b/invoicepdf.html
@@ -163,7 +163,7 @@ GSTIN - 0 9 B F S P S 1 6 4 3 K 1 Z Q
 	  <td style="border-right:1px solid black">5407</td>
 	  <td style="border-right:1px solid black" id="qty"></td>
 	  <td style="border-right:1px solid black" id="rate"></td>
-	  <td id="total"></td>
+	  <td id="amount"></td>
     </tr>
     <tr>
       <td style="border-right:1px solid black"></td>
