--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <div class="container">
 <h1 class="text-center"> GANPATI BASTRAM Invoice Generator </h1> 
 <h5 class="text-center">Maniyaripur, Sattanpur, Varanasi - 221405</h5> <br> 
-<form  action="invoicepdf.html" method="POST">
+<form  action="invoicepdf.html" method="GET">
   <h2 class="text-center"> INPUT </h2> <br> 
  <div class="form-row">
     <div class="form-group col-md-6">
