--- a/invoicepdf.html
+++ b/invoicepdf.html
@@ -145,7 +145,7 @@
                         <br>
                     </td>
                     <td colspan="2" class="text-center" style="border-right:1px solid black"><b>Invoice No.</b><br><br><b id="ino"></b></td>
-                    <td colspan="1" class="text-center"><b>Date</b><br><b id="date"></b></td>
+                    <td colspan="1" class="text-center"><b>Date</b><br><br><b id="date"></b></td>
                 </tr>
 
                 <tr style="font-size:10px">
@@ -230,7 +230,7 @@
                     <td><span id="roundoff" /></td>
                 </tr>
                 <tr style="font-size:10px">
-                    <td colspan="2" style="border-right:1px solid black">Rs. (in words): Rupees <span id="gtotalinwords" /> <span>Only</span></td>
+                    <td colspan="2" style="border-right:1px solid black">Rs. (in words): Rupees <span id="gtotalinwords">Only</span></td>
                     <td colspan="3" style="background-color:black;color:white;border-right:1px solid black">Grand Total</td>
                     <td><span id="grandtotalwro" /></td>
                 </tr>
