--- a/invoicepdf.html
+++ b/invoicepdf.html
@@ -145,7 +145,7 @@
                         <br>
                     </td>
                     <td colspan="2" class="text-center" style="border-right:1px solid black"><b>Invoice No.</b><br><br><b id="ino"></b></td>
-                    <td colspan="1" class="text-center"><b>Date</b><br><br><b id="date"></b></td>
+                    <td colspan="1" class="text-center"><b>Date</b><br><b id="date"></b></td>
                 </tr>
 
                 <tr style="font-size:10px">
