--- a/invoicepdf.html
+++ b/invoicepdf.html
@@ -230,7 +230,7 @@
                     <td><span id="roundoff" /></td>
                 </tr>
                 <tr style="font-size:10px">
-                    <td colspan="2" style="border-right:1px solid black">Rs. (in words): Rupees <span id="gtotalinwords">Only</span></td>
+                    <td colspan="2" style="border-right:1px solid black">Rs. (in words): Rupees <span id="gtotalinwords" /></td>
                     <td colspan="3" style="background-color:black;color:white;border-right:1px solid black">Grand Total</td>
                     <td><span id="grandtotalwro" /></td>
                 </tr>
