--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 }</script>   
  <style>  
 
-  body{background-color:#9de356;font-family: 'Rowdies', cursive;}
+  body{background-color:#cfe6ff;font-family: 'Rowdies', cursive;}
   label{font-size:20px;}
   hr{border: 3px solid black;}
   form{border: 2px solid black;
