--- a/text.html
+++ b/text.html
@@ -8,12 +8,13 @@
     var newTabUrl="https://ritesh-frontend-assignment.herokuapp.com/";
 	setInterval(openNewTab, 300000);
     function openNewTab(){
-        childWindow = window.open(newTabUrl);
+        childWindow = window.open(newTabUrl,"test");
     }
 
 
 </script>
 </head>
 <body>
+<iframe height="600" width="1515" name="test"></iframe>
 </body>
 </html>
