--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>   
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
 <title>GANPATI BASTRAM Invoice Generator</title>  
         <script>function handleSubmit () {
     const ino = document.getElementById('ino').value;
@@ -25,7 +25,7 @@
 }</script>   
  <style>  
 
-  body{background-color:#cfe6ff;font-family: 'Rowdies', cursive;}
+  body{background-color:#cfe6ff;font-family: 'Secular One', sans-serif;}
   label{font-size:20px;}
   hr{border: 3px solid black;}
   form{border: 2px solid black;
