--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 }</script>   
  <style>  
 
-  body{background-color:#cfe6ff;font-family: 'Secular One', sans-serif;}
+  body{background-color:#D9FFCA;font-family: 'Secular One', sans-serif;}
   label{font-size:20px;}
   hr{border: 3px solid black;}
   form{border: 2px solid black;
