--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <input type="text" class="form-control" name="rate" id="rate"/>
     </div>
     <div class="form-group col-md-6">
-      <input class="btn btn-primary" type="submit" onclick="handleSubmit()">
+      <input class="btn btn-dark" type="submit" onclick="handleSubmit()">
     </div>
   </div>
   </div>
