--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 }</script>   
  <style>  
 
-  body{background-color:#D9FFCA;font-family: 'Secular One', sans-serif;}
+  body{background-color:#BCFFA2;font-family: 'Secular One', sans-serif;}
   label{font-size:20px;}
   hr{border: 3px solid black;}
   form{border: 2px solid black;
@@ -56,7 +56,7 @@
       <input type="text" class="form-control" name="rate" id="rate"/>
     </div>
     <div class="form-group col-md-6">
-      <input class="btn btn-dark" type="submit" onclick="handleSubmit()">
+      <input class="btn btn-info" type="submit" onclick="handleSubmit()">
     </div>
   </div>
   </div>
