--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </div>
   </div>
 </form>
-<br><h5 class="text-center">Managed & Calculated by - Sushil Kumar Singh</h5>
+<br><h5 class="text-center">Managed & Owned by - Sushil Kumar Singh</h5>
 </div>
  
 </body>  
