--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>  
 <div class="container">
 <h1 class="text-center"><img src="https://img.icons8.com/external-flaticons-flat-flat-icons/70/000000/external-ganesha-religion-flaticons-flat-flat-icons.png"/> GANPATI BASTRAM Invoice Generator <img src="https://img.icons8.com/external-flaticons-flat-flat-icons/70/000000/external-ganesha-religion-flaticons-flat-flat-icons.png"/></h1> 
-<h5 class="text-center">Maniyaripur, Sattanpur, Varanasi - 221405</h5> <br> 
+<h5 class="text-center">Maniyaripur, Sattanpur Road, Varanasi - 221405</h5> <br> 
 <form  action="invoicepdf.html" method="GET">
   <h2 class="text-center"> INPUT </h2> <br> 
  <div class="form-row">
